Second_Step/data/45/0/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:23: error: ';' expected
        int t==tab[t1];
             ^
Tools.java:23: error: not a statement
        int t==tab[t1];
                  ^
Tools.java:24: error: not a statement
        tab[t1]==tab[t2];
               ^
Tools.java:25: error: not a statement
        tab[t2]==t;
               ^
4 errors
Not compiled
